--- a/Prectice/HTML/test.html
+++ b/Prectice/HTML/test.html
@@ -6,39 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .main {
-            height: 500px;
-            /* width: 100%; */
-            /* width: 50%; */
-            /* width: 600px; */
-            background-image: url("/150mm.jpeg");
-            background-size: contain;
-            /* background-size:cover ; */
-            /* background-size: 100% 100%; */
-            
+        .main *{
+            border: 4px solid;
+            padding: 40px;
+            display: block;
+            /* inline tag ==>  block */
         }
-        .main2{
-            height: 300px;
-            width: 50%;
-            background-image: url("/image/img1.jpeg");
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
-        }
+        /* .main2 *{
+               border: 4px solid;
+            padding: 40px;
+            display: inline;
+            block  => inline
+            } */
+         .main2 *{
+            /* navbar tag  */
+              border: 4px solid;
+            padding: 40px;
+            display: inline-block;
+         }
     </style>
 </head>
 
 <body>
-    <!-- background- img -->
     <div class="main">
-        Hello
+        <div>
+            div
+            <ul>
+                ul
+                <li>
+                    li
+                    <span>span</span>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="main2">
 
+       <div class="main2">
+        <div>
+            div
+            <ul>
+                ul
+                <li>
+                    li
+                    <span>span</span>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <!-- forground img -->
-    <img src="/150mm.jpeg" width="60%" alt="">
-
 </body>
 
 </html>
