--- a/Assignment/Css/LAB/CSS Grid/Grid.html
+++ b/Assignment/Css/LAB/CSS Grid/Grid.html
@@ -2,55 +2,93 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Product Grid</title>
-    <link rel="stylesheet" href="/CSS Grid/style.css" />
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grid Layout</title>
+    <link rel="stylesheet" href="/CSS Grid/style.css">
+    <link rel="stylesheet" href="/CSS Grid/media.css">
+      </head>
   <body>
-    <h1>Our Product</h1>
-    <div class="product-grid">
+    <div class="main">
       <div class="card">
-        <img src="/CSS Grid/Image/150mm.png" alt="Product-1" />
-        <div class="card-content">
-          <div class="card-title">Diverter Pulley-1</div>
-          <div class="card-price">20$</div>
+        <img
+          src="/CSS Grid/Image/150mm.jpeg"width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-1</h2>
+          <span>20$</span>
         </div>
       </div>
       <div class="card">
-        <img src="/CSS Grid/Image/150mm.png" alt="Product-1" />
-        <div class="card-content">
-          <div class="card-title">Diverter Pulley-2</div>
-          <div class="card-price">25$</div>
+        <img
+          src="/CSS Grid/Image/20062mm.jpeg" width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-2</h2>
+          <span>25$</span>
         </div>
       </div>
       <div class="card">
-        <img src="/CSS Grid/Image/150mm.png" alt="Product-1" />
-        <div class="card-content">
-          <div class="card-title">Diverter Pulley-3</div>
-          <div class="card-price">30$</div>
+        <img
+          src="/CSS Grid/Image/20072mm.jpeg" width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-3</h2>
+          <span>30$</span>
         </div>
       </div>
       <div class="card">
-        <img src="/CSS Grid/Image/150mm.png" alt="Product-1" />
-        <div class="card-content">
-          <div class="card-title">Diverter Pulley-4</div>
-          <div class="card-price">25$</div>
+        <img
+          src="/CSS Grid/Image/24072mm.jpeg" width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-4</h2>
+          <span>30$</span>
         </div>
       </div>
       <div class="card">
-        <img src="/CSS Grid/Image/150mm.png" alt="Product-1" />
-        <div class="card-content">
-          <div class="card-title">Diverter Pulley-5</div>
-          <div class="card-price">30$</div>
+        <img
+          src="/CSS Grid/Image/Belt.jpeg" width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-5</h2>
+          <span>35$</span>
         </div>
       </div>
       <div class="card">
-        <img src="/CSS Grid/Image/150mm.png" alt="Product-2" />
-        <div class="card-content">
-          <div class="card-title">Diverter Pulley</div>
-          <div class="card-price">25$</div>
+        <img
+          src="/CSS Grid/Image/30062mm.jpeg" width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-6</h2>
+          <span>25$</span>
         </div>
       </div>
-    </div>
+      <div class="card">
+        <img
+          src="/CSS Grid/Image/30092mm.jpeg" width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-7</h2>
+          <span>20$</span>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          src="/CSS Grid/Image/30072mm.jpeg" width="100px"
+          alt=""
+        />
+        <div class="card-info">
+          <h2>Diverter Pulley-8</h2>
+          <span>30$</span>
+        </div>
+      </div>
+         </div>
   </body>
 </html>
