--- a/Assignment/Css/LAB/CSS Box Model/profile_card.html
+++ b/Assignment/Css/LAB/CSS Box Model/profile_card.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Profile Card</title>
-  <link rel="stylesheet" href="/card.css">
+  <link rel="stylesheet" href="/CSS Box Model/card.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <div class="profile-card">
-<img src="/Profile.jpeg" alt="Profile picture" class="image">
+<img src="/CSS Box Model/Profile.jpeg" alt="Profile picture" class="image">
 <div class="profile-name">Monika Patel</div>
 <div class="profile-bio">Frontend Student HTML, CSS, JS & React.</div>
 <Button class="follow-btn">Follow</Button>
